# LinksKeeper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
linkskeeper/: __init__.py  db_bootstrap.py
migrations/versions/: 25d3850cb808_initial_schema.py
static/: app.css
templates/: base.html  dashboard.html  login.html  register.html
